@@ -5,6 +5,7 @@ o Added a --user option to specify the remote user to login as.
 o New file transfer code that does not assume additional connectivity between
 the host running gsh and the remote shells but still assumes connectivity
 between the remote shells.
+o Added an option to disable colorized hostnames.
 
 
 0.3.1
